# magi-researchers

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: research-advisor.md
.claude/skills/research-brainstorm/: SKILL.md
.claude/skills/research-implement/: SKILL.md
.claude/skills/research-report/: SKILL.md
claude_researchers/: __init__.py
config/: flags.yaml
docs/: journal-strategies.md
examples/damped_oscillator_comparison/: claude.md  codex.md  evaluation_report.md  gemini.md  magi_blind.md  magi_synthesis.md  prompt.md
schemas/: checkpoint.schema.json  citation_ledger.schema.json  execution_manifest.schema.json  plot_manifest.schema.json  report_versions.schema.json  section_contracts.schema.json  weights.schema.json  write_inputs.schema.json
shared/: rules.md
skills/research/: SKILL.md
skills/research-brainstorm/: SKILL.md
skills/research-execute/: SKILL.md
skills/research-explain/: SKILL.md
skills/research-implement/: SKILL.md
skills/research-report/: SKILL.md
skills/research-search/: SKILL.md
skills/research-test/: SKILL.md
skills/research-write/: SKILL.md
templates/: report_template.md
templates/domains/: ai_ml.md  journal_strategy.md  journal_strategy_ai_ml.md  journal_strategy_interdisciplinary.md  journal_strategy_physics.md  mathematics.md  paper.md  physics.md  statistics.md
templates/writing/: paper.md  proposal.md
utils/: validate_draft.py  validate_intake.py  validate_schema.py
(+16 files in other folders)
