[project]
name = "magi-researchers"
version = "0.5.0"
description = "Three AI models, one synthesis — multi-model research workflow for scientific domains"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "SciencePlots>=2.1",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["magi_researchers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
